[package]
name = "leos-kernel"
version = "0.1.0"
authors = ["Ilja Kartašov <ik@lowenware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
